	  an 'error.roc' symlink to our installed 'error.rock' file

	* src/main/perl/bin/bedrock-create-site.in
	(maybe_copy_dist_error_dot_rock_or_die): new function
	(--overwrite-error-dot-roc): new command line opt
	(--nooverwrite-error-dot-roc): new command line opt
	(--overwrite-error-dot-rock): new command line opt
	(--nooverwrite-error-dot-rock): new command line opt
	- Doc updates for all of the above
	($BEDROCK_DIST_CGIBIN_DIR): filter in at build time
	($BEDROCK_DIST_HTDOCS_DIR): filter in at build time

	* src/main/perl/bin/Makefile.am (install-exec-hook): Invoke 'rm -f
	  foo' in front of '$(LN_S) file foo' to allow multiple invocations
	  of 'make install' to work.

	* configure.ac (cgibindir): New AC_SUBST application
	* src/main/perl/cgi-bin/Makefile.am (cgibindir): Moved definition
	  to top-level configure.ac file

	* configure.ac (htdocsdir): New AC_SUBST application
	* src/main/resources/htdocs/Makefile.am (htdocsdir): Moved
	  definition to top-level configure.ac file

	* src/main/resources/Makefile.am (bedrock-perl5-inc-begin-block.snippet):
	  file is now in the 'data_DATA' list rather than the
	  'noinst_DATA' list to cause it to be installed (for consumption
	  by external tools, etc.)

2008-03-02  Alan D. Salewski  <ASalewski@signatureinfo.com>

	* src/main/perl/bin/Makefile.am
	(bedrock-create-site.1): Use '--name' opt in pod2man invocation to
	  create proper name (not one named after the program template file)
	* src/main/perl/cgi-bin/Makefile.am (bedrock.cgi.1): likewise

	* src/main/perl/bin/bedrock-create-site.in
	(maybe_create_apache_site_config_file_or_die): fixed minor bugs;
	  light testing of implementation
	($AUTH_PASSWORD): Prompt user for password if it is not provided
	  on the command line
	(OPTIONS) Reorganized man page section to group command line
	  options into three categories: "General", "Apache Site
	  Authentication Options", and "Overwrite Options"
	- Documented all currently available command line opts
