@@ -139,6 +139,7 @@ our $DO_OVERWRITE_ERROR_DOT_ROC  = -1;          # dflt; 0 if explicitly disabled
 our $DO_OVERWRITE_ERROR_DOT_ROCK = -1;          # likewise
 our $DO_OVERWRITE_INDEX_DOT_ROC  = -1;          # likewise
 our $DO_OVERWRITE_INDEX_DOT_ROCK = -1;          # likewise
+our $DO_OVERWRITE_BEDROCK_DOT_CGI = -1;         # likewise
 our $DO_OVERWRITE_APACHE_SITE_CONF = -1;        # likewise
 our $DO_OVERWRITE_APACHE_AUTH_DB_INCLUDE = -1;  # likewise
 
@@ -147,10 +148,11 @@ our $DO_OVERWRITE_APACHE_AUTH_DB_INCLUDE = -1;  # likewise
 # flip them all on if the user specifies the -O (--overwrite) global
 # overwrite option. This simplifies code because only one option need be
 # checked.
-my %ALL_OVERWRITE_OPTS = ( DO_OVERWRITE_ERROR_DOT_ROC  => 'error.roc',
-                           DO_OVERWRITE_ERROR_DOT_ROCK => 'error.rock',
-                           DO_OVERWRITE_INDEX_DOT_ROC  => 'index.roc',
-                           DO_OVERWRITE_INDEX_DOT_ROCK => 'index.rock',
+my %ALL_OVERWRITE_OPTS = ( DO_OVERWRITE_ERROR_DOT_ROC   => 'error.roc',
+                           DO_OVERWRITE_ERROR_DOT_ROCK  => 'error.rock',
+                           DO_OVERWRITE_INDEX_DOT_ROC   => 'index.roc',
+                           DO_OVERWRITE_INDEX_DOT_ROCK  => 'index.rock',
+                           DO_OVERWRITE_BEDROCK_DOT_CGI => 'bedrock.cgi',
                            DO_OVERWRITE_APACHE_SITE_CONF => undef,  # not yet known
                            DO_OVERWRITE_APACHE_AUTH_DB_INCLUDE => undef,  # not yet known; may never be specified
                          );
@@ -264,6 +266,11 @@ Overwrite Options:
   --nooverwrite-apache-auth-db-include
                      Do not overwrite the specified Apache auth db
                      directives include file
+
+  --overwrite-bedrock-dot-cgi
+                     Force overwriting of \$sitedir/cgi-bin/bedrock.cgi
+  --nooverwrite-bedrock-dot-cgi
+                     Do not overwrite \$sitedir/cgi-bin/bedrock.cgi
 
   --overwrite-error-dot-roc
                      Force overwriting of \$sitedir/htdocs/error.roc
@@ -712,6 +719,62 @@ sub maybe_copy_dist_error_dot_rock_or_die {
         print STDERR qq{${PROG} (info): successfully created symlink "$errorroc"\n}
             if $BE_VERBOSE;
     }
+    return;
+}
+
+# Looks for a 'bedrock.cgi' file copies the one from the bedrock distribution
+# if not found. Ensures that the resulting file is world readable and
+# executable by specifically setting the mode to 0755.
+#
+# This function obeys this fine-grained overwrite flag:
+#     $DO_OVERWRITE_BEDROCK_DOT_CGI
+#
+# @param $site_dir - (required) The web site diretory as specified by the
+#                    user. The bedrock.cgi file will live in:
+#                        $site_dir/cgi-bin/
+#
+# @return Does not return a meaningful value. Exits with an error status on
+#         error.
+#
+sub maybe_copy_dist_bedrock_dot_cgi_or_die {
+    my ($site_dir) = @_;
+    confess( __func, q{(): required '$site_dir' param not provided} )
+        unless defined $site_dir;
+
+    my $bedrockcgi = catdir( $site_dir, 'cgi-bin', 'bedrock.cgi');
+
+    my $copy_bedrockcgi = 0;
+    print STDERR qq{${PROG} (info): checking for the existince of file "$bedrockcgi"...}
+        if $BE_VERBOSE;
+    if (-f $bedrockcgi) {
+        if ($DO_OVERWRITE_BEDROCK_DOT_CGI) {
+            print STDERR qq{found; will overwrite.\n};
+            $copy_bedrockcgi = 1;
+        }
+        else {
+            print STDERR qq{found; will not overwrite.\n};
+        }
+    }
+    else {
+        print STDERR qq{not found; will copy from Bedrock distribution.\n};
+        $copy_bedrockcgi = 1;
+    }
+
+    if ($copy_bedrockcgi) {
+        my $dist_bedrockcgi = "${BEDROCK_DIST_CGIBIN_DIR}/bedrock.cgi";
+        unless (-f $dist_bedrockcgi) {
+            warn(qq{${PROG} (error): Bedrock distribution file does not exist: "${dist_bedrockcgi}": $!\n});
+            exit 1;
+        }
+
+        unless ( copy( $dist_bedrockcgi, $bedrockcgi )) {
+            warn(qq{${PROG} (error): Was unable to copy Bedrock distribution file ("${dist_bedrockcgi}") to "$bedrockcgi": $!\n});
+            exit 1;
+        }
+        print STDERR qq{${PROG} (info): successfully copied file "$bedrockcgi" from Bedrock distribution\n}
+            if $BE_VERBOSE;
+    }
+
     return;
 }
 
@@ -1239,6 +1302,7 @@ if ($BE_VERBOSE) {
 
 maybe_create_site_directory_tree_or_die( $WEBSITE_DIR );
 maybe_create_index_dot_rock_or_die( $WEBSITE_DIR );
+maybe_copy_dist_bedrock_dot_cgi_or_die( $WEBSITE_DIR );
 maybe_copy_dist_error_dot_rock_or_die( $WEBSITE_DIR );
 
 maybe_create_apache_site_config_file_or_die(
@@ -1602,6 +1666,17 @@ C<--apache-auth-db-include=FILE> command line option. This is the default
 behavior, unless the global C<--overwrite> option has been specified. If no
 C<--apache-auth-db-include=FILE> command line option has been specified,
 then this option has no effect.
+
+
+=item --overwrite-bedrock-dot-cgi
+
+(Optional) Force overwriting of C<$sitedir/cgi-bin/bedrock.cgi>
+
+=item --nooverwrite-bedrock-dot-cgi
+
+(Optional) Do not overwrite C<$sitedir/cgi-bin/bedrock.cgi>. This is the
+default behavior, unless the global C<--overwrite> option has been
+specified.
 
 
 =item --overwrite-error-dot-roc
