@@ -14,6 +14,9 @@
 	(--nooverwrite-error-dot-roc): new command line opt
 	(--overwrite-error-dot-rock): new command line opt
 	(--nooverwrite-error-dot-rock): new command line opt
+	(maybe_copy_dist_bedrock_dot_cgi_or_die): new function
+	(--overwrite-bedrock-dot-cgi): new command line opt
+	(--nooverwrite-bedrock-dot-cgi): new command line opt
 	- Doc updates for all of the above
 	($BEDROCK_DIST_CGIBIN_DIR): filter in at build time
 	($BEDROCK_DIST_HTDOCS_DIR): filter in at build time
